--- a/index.html
+++ b/index.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flower Shop Practice</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
-<body>
-  <h2>Flower Shop Practice</h2>
+
+<body class="lato-thin">
+  <section class="banner">
+    <div class="banner-text">
+      <h1>Let's make beautiful flowers a part of your life.</h1>
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+        at its
+        layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+      <button>Shop Now</button>
+    </div>
+    <div class="banner-pic">
+      <img src="./Flower Asset/pngwing 10.png" alt="">
+    </div>
+  </section>
+  <section class="feature">
+    <div class="feature-title">
+      <h2>Our Featured Flowers</h2>
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+        at its
+        layout.</p>
+    </div>
+    <div class="feature-body">
+      <div class="feature-pic purple">
+        <img class="first" src="./Flower Asset/pngwing 6.png" alt="">
+
+      </div>
+      <div class="feature-pic blue">
+        <img class="second" src="./Flower Asset/pngwing 5.png" alt="">
+
+      </div>
+      <div class="feature-pic gray ">
+        <img class="third" src="./Flower Asset/pngwing 7.png" alt="">
+
+      </div>
+    </div>
+    <div class="feature-footer">
+      <a href="">Pink Flower Tree</a>
+      <a href="">Pink Flower Tree</a>
+      <a href="">Pink Flower Tree</a>
+    </div>
+  </section>
+  <section class="service">
+    <div class="first">
+      <img src="./Flower Asset/Group 57.png" alt="">
+      <h4>Same Day Delivery. Click & Collect.</h4>
+    </div>
+    <div class="second">
+      <img src="./Flower Asset/Group 58.png" alt="">
+      <h4>Fresh Flowers. Local Growers.</h4>
+    </div>
+    <div class="third">
+      <img src="./Flower Asset/Group 59.png" alt="">
+      <h4>24/7 Free Support.</h4>
+    </div>
+  </section>
+  <section class="hot-deal">
+    <div class="text">
+      <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+        at its
+        layout.</p>
+      <button>Sign Up</button>
+    </div>
+    <div class="hot-deal-pic">
+      <img src="./Flower Asset/pngwing 8.png" alt="">
+    </div>
+  </section>
+  <section class="instagram">
+    <div class="instagram-title">
+      <h2>Instagram</h2>
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+        at its
+        layout.</p>
+    </div>
+    <div class="instagram-pic">
+      <img src="./Flower Asset/Flower 01.png" alt="">
+      <img src="./Flower Asset/Rectangle 4.png" alt="">
+      <img src="./Flower Asset/Rectangle 5.png" alt="">
+      <img src="./Flower Asset/Rectangle 6.png" alt="">
+    </div>
+  </section>
+  <section class="deal">
+    <h2>Get The Latest Deals</h2>
+    <p>$30 coupon for first shopping</p>
+    <div class="form">
+      <input type="email" placeholder="Enter your email here :">
+      <button>Subscribe</button>
+    </div>
+  </section>
+  <footer>
+    <h2><span>Flower</span>Shop</h2>
+    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its
+    layout.</p>
+    <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+  </footer>
 </body>
+
 </html>
