--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
         layout.</p>
     </div>
     <div class="feature-body">
-      <div class="feature-pic purple">
-        <img class="first" src="./Flower Asset/pngwing 6.png" alt="">
-
+      <div class="feature-card purple">
+        <img class="first-image" src="./Flower Asset/pngwing 6.png" alt="">
       </div>
-      <div class="feature-pic blue">
-        <img class="second" src="./Flower Asset/pngwing 5.png" alt="">
-
+      <div class="feature-card blue">
+        <img class="second-image" src="./Flower Asset/pngwing 5.png" alt="">
       </div>
-      <div class="feature-pic gray ">
-        <img class="third" src="./Flower Asset/pngwing 7.png" alt="">
-
+      <div class="feature-card gray">
+        <img class="third-image" src="./Flower Asset/pngwing 7.png" alt="">
       </div>
     </div>
     <div class="feature-footer">
@@ -103,8 +100,9 @@
   </section>
   <footer>
     <h2><span>Flower</span>Shop</h2>
-    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its
-    layout.</p>
+    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
+      looking at its
+      layout.</p>
     <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
   </footer>
 </body>
