--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="lato-thin">
   <section class="banner">
     <div class="banner-text">
-      <h1>Let's make beautiful flowers a part of your life.</h1>
+      <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
         at its
         layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
@@ -27,28 +27,33 @@
     </div>
   </section>
   <section class="feature">
-    <div class="feature-title">
+    <div class="feature-title ">
       <h2>Our Featured Flowers</h2>
       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
         at its
         layout.</p>
     </div>
     <div class="feature-body">
-      <div class="feature-card purple">
-        <img class="first-image" src="./Flower Asset/pngwing 6.png" alt="">
+      <div class="first-card">
+        <div class="feature-card purple">
+          <img class="first-image" src="./Flower Asset/pngwing 6.png" alt="">
+        </div>
+        <a href="">Pink Flower Tree</a>
       </div>
-      <div class="feature-card blue">
-        <img class="second-image" src="./Flower Asset/pngwing 5.png" alt="">
+      <div class="second-card">
+        <div class="feature-card blue">
+          <img class="second-image" src="./Flower Asset/pngwing 5.png" alt="">
+        </div>
+        <a href="">Pink Flower Tree</a>
       </div>
-      <div class="feature-card gray">
-        <img class="third-image" src="./Flower Asset/pngwing 7.png" alt="">
+      <div class="third-card">
+        <div class="feature-card gray">
+          <img class="third-image" src="./Flower Asset/pngwing 7.png" alt="">
+        </div>
+        <a href="">Pink Flower Tree</a>
       </div>
     </div>
-    <div class="feature-footer">
-      <a href="">Pink Flower Tree</a>
-      <a href="">Pink Flower Tree</a>
-      <a href="">Pink Flower Tree</a>
-    </div>
+    
   </section>
   <section class="service">
     <div class="first">
@@ -98,7 +103,7 @@
       <button>Subscribe</button>
     </div>
   </section>
-  <footer>
+  <footer class="">
     <h2><span>Flower</span>Shop</h2>
     <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
       looking at its
