--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
     </div>
   </section>
   <section class="deal">
-    <h2>Get The Latest Deals</h2>
-    <p>$30 coupon for first shopping</p>
-    <div class="form">
-      <input type="email" placeholder="Enter your email here :">
-      <button>Subscribe</button>
+    <div class="core">
+      <h2>Get The Latest Deals</h2>
+      <p>$30 coupon for first shopping</p>
+      <div class="form">
+        <input type="email" placeholder="Enter your email here :">
+        <button>Subscribe</button>
+      </div>
     </div>
   </section>
   <footer class="">
